--- a/sgl-router/Cargo.toml
+++ b/sgl-router/Cargo.toml
@@ -75,6 +75,8 @@ deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
 backoff = { version = "0.4", features = ["tokio"] }
 strum = { version = "0.26", features = ["derive"] }
 once_cell = "1.21.3"
+zmq = "0.10.0"
+rmp-serde = "1.3"
 
 [build-dependencies]
 tonic-build = "0.12"
